--- a/src/components/Header/maincontent.css
+++ b/src/components/Header/maincontent.css
@@ -3,7 +3,7 @@
     height: 80vh;
     background-color: white;
 
-    background-image: url('../images/background2.png');
+    background-image: url('../images/background1.png');
     z-index: 1000;
 
     background-image: url('../images/background4.png');
